syntax = "proto3";

package com.adrienben.demo.domain.in;

option java_multiple_files = true;

message OfferDetailsProto {
  string offerId = 1;
  string productId = 2;
  string skuId = 3;
  string name = 4;
  string description = 5;
}
