syntax = "proto3";

package com.adrienben.demo.domain.in;

option java_multiple_files = true;

message PriceProto {
  string offerId = 1;
  string productId = 2;
  string skuId = 3;
  float amount = 4;
}
