syntax = "proto3";

package com.adrienben.demo.domain.in;

option java_multiple_files = true;

message SkuDetails {
  string skuId = 1;
  string productId = 2;
  string name = 3;
  string description = 4;
}
